name:                hannah
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hannah#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:          specs/pcap.spec
                   , specs/pcap/ethernet.spec
                   , specs/pcap/ethernet/ipv4.spec
                   , specs/pcap/ethernet/ipv4/tcp.spec
                   , specs/pcap/ethernet/ipv4/tcp/ascii.spec

library
  hs-source-dirs:      src
  exposed-modules:     AST
                     , ParseSpec
                     , ParseOption
                     , Read
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cpu
                     , parsec
                     , transformers
  default-language:    Haskell2010

executable hannah-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , hannah
                     , filepath
  default-language:    Haskell2010

test-suite hannah-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hannah
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hannah
