name:                hannah
version:             0.1.0.0
synopsis:            a DSL for parsing and generating files and network traces
-- description:
homepage:            https://github.com/abau/hannah#readme
license:             GPL
license-file:        LICENSE.txt
author:              Alexander Bau
maintainer:          Alexander Bau
copyright:           2017 Alexander Bau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:          specs/pcap.spec
                   , specs/pcap/data.spec
                   , specs/pcap/ethernet.spec
                   , specs/pcap/ethernet/ipv4.spec
                   , specs/pcap/ethernet/ipv4/tcp.spec
                   , specs/pcap/ethernet/ipv4/tcp/ascii.spec
                   , specs/bmp.spec
                   , hannah-js.html

library
  hs-source-dirs:      src
  exposed-modules:     AST
                     , JavaScript
                     , ParseSpec
                     , Read
                     , Util
                     , Write
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cpu
                     , parsec
                     , transformers
  default-language:    Haskell2010

executable hannah
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       ParseOption
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , hannah
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/abau/hannah
